test/conformance/kuttl/mutate/clusterpolicy/standard/mutate-istio-operator/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-istio-operator
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
